// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/generateJunctionSeed should return single seed data for junction-table model 1`] = `
Object {
  "articleId": 6898,
  "id": 48239,
  "tagId": 10295,
}
`;

exports[`utils/generateJunctionSeeds should return multiple seed data for junction-table model 1`] = `
Array [
  Object {
    "articleId": 36084,
    "id": 37083,
    "tagId": 91264,
  },
  Object {
    "articleId": 6898,
    "id": 48239,
    "tagId": 10295,
  },
  Object {
    "articleId": 14780,
    "id": 52023,
    "tagId": 89794,
  },
]
`;

exports[`utils/generateSeed should return signle data for array with items 1`] = `
Object {
  "id": 32711,
  "tag": Array [
    "Associate",
  ],
}
`;

exports[`utils/generateSeed should return single data for company name 1`] = `
Object {
  "name": "Kihn Group",
}
`;

exports[`utils/generateSeed should return single data for object with items 1`] = `
Object {
  "address": Object {
    "city": "West Allan",
    "state": "Arizona",
    "streetAddress": "598 Dianna Landing",
  },
  "countryCode": "SS",
  "id": 26129,
}
`;

exports[`utils/generateSeed should return single seed data for fake book 1`] = `
Object {
  "authorId": 48827,
  "dateStr": "2000-01-05T14:03:33.395Z",
  "id": 66879,
  "price": "633.00",
  "title": "Tasty Developer Credit Card Account",
}
`;

exports[`utils/generateSeed should return single seed data for fake user 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/madebyvadim/128.jpg",
  "email": "Nathanial.Boyle24@hotmail.com",
  "id": 65336,
  "lastSignInAt": 1999-12-09T13:52:36.585Z,
  "locale": "de",
  "loggedInCount": 73489,
  "name": "加藤 蓮",
  "userName": "Kyle.Robel52",
}
`;

exports[`utils/generateSeed should return single seed data for fake user with today(1970/1/1) 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/madebyvadim/128.jpg",
  "email": "Ayla.Reynolds@hotmail.com",
  "id": 65336,
  "lastSignInAt": 1969-12-09T03:52:36.585Z,
  "locale": "de",
  "loggedInCount": 78888,
  "name": "Kyle Robel",
  "userName": "Pansy_Jast",
}
`;

exports[`utils/generateSeed should return single seed data for fake user without locale 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/madebyvadim/128.jpg",
  "email": "Ayla.Reynolds@hotmail.com",
  "id": 65336,
  "lastSignInAt": 1999-12-09T13:52:36.585Z,
  "locale": "de",
  "loggedInCount": 78888,
  "name": "Kyle Robel",
  "userName": "Pansy_Jast",
}
`;

exports[`utils/generateSeeds should return multiple seed data for fake 3 user 1`] = `
Array [
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/normanbox/128.jpg",
    "email": "Jordi64@gmail.com",
    "id": 61922,
    "lastSignInAt": 1999-12-09T05:11:02.980Z,
    "locale": "ru",
    "loggedInCount": 4515,
    "name": "山田 翼",
    "userName": "Willy.Crist",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/madebyvadim/128.jpg",
    "email": "Nathanial.Boyle24@hotmail.com",
    "id": 65336,
    "lastSignInAt": 1999-12-09T13:52:36.585Z,
    "locale": "de",
    "loggedInCount": 73489,
    "name": "加藤 蓮",
    "userName": "Kyle.Robel52",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/commadelimited/128.jpg",
    "email": "Kathleen86@hotmail.com",
    "id": 75486,
    "lastSignInAt": 1999-10-28T05:40:48.919Z,
    "locale": "sv",
    "loggedInCount": 99496,
    "name": "佐々木 大翔",
    "userName": "Irma0",
  },
]
`;
